fixed styles for button-groups in windows' content and dui-table.
fixed horizontal scrolling in dui-table.

--- a/packages/native-ui/src/components/button/button.component.scss
+++ b/packages/native-ui/src/components/button/button.component.scss
@@ -173,17 +173,13 @@ $buttonTextColor: #575757;
     &:not(.disabled):not(.square).active {
         color: $buttonTextColor;
         background-image: linear-gradient(-180deg, #C6C9CC 0%, #C2C5C8 100%, #C1C4C7 100%);
-        border-top: 1px solid #cfd3d6;
-        border-bottom: 1px solid #c1c4c7;
-        border-left: 1px solid #c3cbd0;
-        border-right: 1px solid #c3cbd0;
+        border-top: 1px solid #1c1d1f;
+        border-bottom: 1px solid #1a1b1d;
+        border-left: 1px solid #484c50;
+        border-right: 1px solid #484c50;
 
         &:active {
             background-image: linear-gradient(-180deg, #E9ECEF 0%, #E4E8EA 100%);
-            border-top: 1px solid #eff3f6;
-            border-bottom: 1px solid #e4e8ea;
-            border-left: 1px solid #e5edf2;
-            border-right: 1px solid #e5edf2;
         }
     }
 }
