--- a/packages/native-ui/src/components/input/input.component.scss
+++ b/packages/native-ui/src/components/input/input.component.scss
@@ -55,6 +55,7 @@ textarea, input {
     height: 100%;
     padding: 0 4px;
     vertical-align: top;
+    resize: none;
 
     &::placeholder {
         color: #c5c5c5;
